# FreightView

./: .gitignore  Cargo.toml  LICENSE  README.md  \
.nvim/: custom.lua
example-docker/: Dockerfile  docker-compose.yaml
example-docker/first_stage/: Dockerfile
example-docker/second_stage/: Dockerfile  docker-compose.yaml
src/: docker_file_tree.rs  docker_image_utils.rs  exceptions.rs  file_tree.rs  file_tree_node.rs  gui_app.rs  main.rs
src/widgets/: focus_traits.rs  help_widget.rs  layer_browser_widget.rs  mod.rs  multitree_browser_widget.rs  navigation_traits.rs  searchbar.rs  tree_browser_widget.rs
test-assets/real-life-layers/: sha256:270a1170e7e398434ff1b31e17e233f7d7b71aa99a40473615860068e86720af.json
test-assets/test-docker-tar/: index.json
test-docker-tar/: manifest.json  repositories
test-files/: Dockerfile
