[package]
name = "ddive"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.18.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["cargo","derive"] }
flate2 = "*"
tar = "*"
futures-core = "*"
futures-util = "*"
walkdir = "*"
tempfile = "*"
serde = { version = "1.0", features = ["derive","rc"]}
serde_json = "1.0"
home = "*"
ratatui = "0.29.0"
crossterm = "0.28.1"
tui-tree-widget = "*"
thiserror = "2.0.12"

[dev-dependencies]
assert_matches = "1.5"
