[package]
name = "freightview"
version = "0.1.0"
edition = "2024"
authors = ["Georgii Krikun"]
rust-version = "1.86.0"
description = "A terminal UI tool for viewing and managing local Docker images and containers."
repository = "https://github.com/GeorgiiKrikun/FreightView"
license-file = "LICENSE" 
keywords = ["docker", "images", "containers", "terminal", "layers", "tui", "ui", "dive"]
categories = ["command-line-utilities", "command-line-interface", "development-tools", "virtualization"]
readme = "README.md"
default-run = "freightview"


[dependencies]
bollard = "0.18.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["cargo","derive"] }
flate2 = "*"
tar = "*"
futures-core = "*"
futures-util = "*"
walkdir = "*"
tempfile = "*"
serde = { version = "1.0", features = ["derive","rc"]}
serde_json = "1.0"
home = "*"
ratatui = "0.29.0"
crossterm = "0.28.1"
tui-tree-widget = "*"
thiserror = "2.0.12"

[dev-dependencies]
assert_matches = "1.5" 
