[package]
name = "freightview"
version = "0.3.0"
edition = "2024"
authors = ["Georgii Krikun"]
rust-version = "1.86.0"
description = "A terminal UI tool for viewing and managing local Docker images and containers."
repository = "https://github.com/GeorgiiKrikun/FreightView"
license-file = "LICENSE" 
keywords = ["docker", "tui", "inspection", "layers",  "ui", ]
categories = ["command-line-utilities", "command-line-interface", "development-tools", "virtualization"]
readme = "README.md"
default-run = "freightview"


[dependencies]
bollard = "0.18.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["cargo","derive"] }
flate2 = "1.1.1"
tar = "0.4.44"
futures-core = "0.3.31"
futures-util = "0.3.31"
walkdir = "2.5.0"
tempfile = "3.19.1"
serde = { version = "1.0", features = ["derive","rc"]}
serde_json = "1.0"
home = "0.5.11"
ratatui = "0.29.0"
crossterm = "0.28.1"
tui-tree-widget = "0.23.0"
thiserror = "2.0.12"

[dev-dependencies]
assert_matches = "1.5" 
